--- a/GymApp/Views/Routine/routinesHistory.cshtml
+++ b/GymApp/Views/Routine/routinesHistory.cshtml
@@ -1,33 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Routines History";
+    Layout = "../Shared/_LayoutRoutines.cshtml";
 }
 <body>
     <div class="container">
-        <header>
-            <img src="file (1).png" alt="Logo" class="logo">
-            <nav>
-                <a href="#">
-                    <img src="~/css/Img/LogoFitness.png" alt="Profile Icon">
-                    <span>Profile</span>
-                </a>
-                <a href="#">
-                    <img src="~/css/Img/LogoFitness.png" alt="Notifications Icon">
-                    <span>Notifications</span>
-                </a>
-                <a href="#">
-                    <img src="~/css/Img/LogoFitness.png" alt="Routines Icon">
-                    <span>Routines</span>
-                </a>
-                <a href="#">
-                    <img src="~/css/Img/LogoFitness.png" alt="Classes Icon">
-                    <span>Classes</span>
-                </a>
-                <a href="#">
-                    <img src="~/css/Img/LogoFitness.png" alt="Log Out Icon">
-                    <span>Log Out</span>
-                </a>
-            </nav>
-        </header>
         <main>
             <h1>Routines History</h1>
             <div class="routine-list">
