--- a/GymApp/Views/Shared/_LayoutRoutines.cshtml
+++ b/GymApp/Views/Shared/_LayoutRoutines.cshtml
@@ -20,7 +20,7 @@
                 <img src="/css/Img/LogoFitness.png" alt="Notifications Icon">
                 <span>Notifications</span>
             </a>
-            <a href="#">
+            <a asp-controller="Routine" asp-action="routinesHistory">
                 <img src="/css/Img/LogoFitness.png" alt="Routines Icon">
                 <span>Routines</span>
             </a>
@@ -52,6 +52,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.css" />
+    <script src="https://cdn.datatables.net/2.0.8/js/dataTables.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
