--- a/GymApp/Views/Routine/Create.cshtml
+++ b/GymApp/Views/Routine/Create.cshtml
@@ -4,6 +4,8 @@
 }
 <script src="~/js/pages/Routines/createRoutines.js" defer></script>
 <link rel="stylesheet" href="~/css/routines.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
+
 
     <div class="container">
         <main>
