Reset Password functionality
Added logic to send email to reset password

--- a/GymApp/Views/User/Login.cshtml
+++ b/GymApp/Views/User/Login.cshtml
@@ -22,5 +22,7 @@
         <div class="form-group">
             <button type="button" class="btn btn-success" id="btnLogin">LOG IN</button>
         </div>
+
+        <p> Forgot your password? <a class="stretched-link" asp-area="" asp-controller="User" asp-action="ResetPassword">Reset it now.</a></p>
     </form>
 </div>
