--- a/GymApp/Views/User/ResetPassword.cshtml
+++ b/GymApp/Views/User/ResetPassword.cshtml
@@ -2,15 +2,18 @@
     ViewData["Title"] = "Reset Password";
 }
 
-<script src="~/js/Pages/User/RestPassword.js" defer></script>
+<script src="~/js/Pages/User/ResetPassword.js" defer></script>
 
 <div class="text-center">
     <h1 class="display-4">Reset your Password</h1>
-    <p>for your account on Fitness Center.</p>
+    <p class="strong">for your Fitness Center Account.</p>
 </div>
+
 <div class="form-group">
-    <p>Enter your email address below, a message will be sent to reset your password.</p>
-    <form class="frmUser" id="loginForm">
+    <div class="text-center">
+        <p>Enter your email address below, a message will be sent to reset your password.</p>
+    </div>
+    <form class="frmUser" id="resetPasswordForm">
         <div>
             <label for="email">Email</label>
             <input id="email" type="text" class="form-control" required />
