--- a/GymApp/Views/User/Login.cshtml
+++ b/GymApp/Views/User/Login.cshtml
@@ -19,13 +19,13 @@
             <input id="password" type="password" class="form-control" required />
         </div>
 
-        <div class="form-group">
+        <div class="text-center">
             <button type="button" class="btn btn-success" id="btnLogin">LOG IN</button>
         </div>
     </form>
 
-    <div>
-        <p> Forgot your password? <a  asp-area="" asp-controller="User" asp-action="ResetPassword">Reset it now.</a></p>
+    <div class="text-center">
+        <p>Forgot your password? <a asp-area="" asp-controller="User" asp-action="ResetPasswordRequest">Reset it now.</a></p>
     </div>
-    
+
 </div>
