--- a/GymApp/Views/User/ResetPassword.cshtml
+++ b/GymApp/Views/User/ResetPassword.cshtml
@@ -5,22 +5,25 @@
 <script src="~/js/Pages/User/ResetPassword.js" defer></script>
 
 <div class="text-center">
-    <h1 class="display-4">Reset your Password</h1>
-    <p class="strong">for your Fitness Center Account.</p>
+    <h1 class="display-4">Enter Your New Password</h1>
 </div>
 
 <div class="form-group">
-    <div class="text-center">
-        <p>Enter your email address below, a message will be sent to reset your password.</p>
-    </div>
     <form class="frmUser" id="resetPasswordForm">
-        <div>
-            <label for="email">Email</label>
-            <input id="email" type="text" class="form-control" required />
+        <div class="form-group">
+            <label for="password">New Password</label>
+            <input id="newPassword" type="password" class="form-control" required />
         </div>
 
         <div class="form-group">
-            <button type="button" class="btn btn-success" id="btnResetPassword">RESET PASSWORD</button>
+            <label for="confirmPassword">Confirm Password</label>
+            <input id="confirmPassword" type="password" class="form-control" required />
+
+            <span  class="text-danger"></span>
+        </div>
+
+        <div class="text-center">
+            <button type="submit" class="btn btn-success" id="btnResetPassword">RESET PASSWORD</button>
         </div>
     </form>
 </div>
