--- a/GymApp/Views/Routine/Create.cshtml
+++ b/GymApp/Views/Routine/Create.cshtml
@@ -12,26 +12,24 @@
             <h1>Create Routine</h1>
             <div class="form-container">
                 <form id="createRoutineForm" action="submit">
-                    <label for="exercise-name">Instructor Name</label>
-                    <input type="text" id="instructor_name" name="instructor_name">
+                    <label for="exercise-name">Member ID</label>
+                    <input type="text" id="member_id" name="member_id">
 
-                    <label for="exercise-name">Exercise Name</label>
-                    <input type="text" id="exercise_name" name="exercise_name">
+                    <label for="instructor_id">Instructor ID</label>
+                    <input type="text" id="instructor_id" name="instructor_id">
 
-                    <label for="exercise-type">Exercise Type</label>
-                    <input type="text" id="exercise_type" name="exercise_type">
+                    <label for="measurement_appointment_id">Measurement Appointment ID</label>
+                    <input type="text" id="measurement_appointment_id" name="measurement_appointment_id">
 
-                    <label for="sets">Sets</label>
-                    <input type="text" id="sets" name="sets">
+                    <label for="sets">Name</label>
+                    <input type="text" id="name" name="name">
 
-                    <label for="weight">Weight</label>
-                    <input type="number" id="weight" name="weight">
+                    <label for="description">Description</label>
+                    <input type="text" id="description" name="description">
 
-                    <label for="time">Time Duration</label>
-                    <input type="text" id="time_duration" name="time_duration">
+                    <label for="creation_date">Creation Date</label>
+                <input type="datetime-local" id="creation_date" name="creation_date">
 
-                    <label for="machine">Machine</label>
-                    <input type="text" id="machine" name="machine">
 
                     <div class="button-container">
                         <button type="submit">Create</button>
