--- a/GymApp/Views/Shared/_LayoutExercises.cshtml
+++ b/GymApp/Views/Shared/_LayoutExercises.cshtml
@@ -26,7 +26,7 @@
                 <img src="/css/Img/Routines.png" alt="Routines Icon">
                 <span>Routines</span>
             </a>
-            <a href="#">
+            <a asp-controller="Select" asp-action="selectExercises">
                 <img src="/css/Img/Classes.png" alt="Classes Icon">
                 <span>Classes</span>
             </a>
