--- a/GymApp/Views/Shared/_LayoutRoutines.cshtml
+++ b/GymApp/Views/Shared/_LayoutRoutines.cshtml
@@ -26,10 +26,11 @@
                 <img src="/css/Img/Routines.png" alt="Routines Icon">
                 <span>Routines</span>
             </a>
-            <a asp-controller="Exercise" asp-action="Create">
+            <a asp-controller="Exercise" asp-action="Select">
                 <img src="/css/Img/Classes.png" alt="Classes Icon">
                 <span>Classes</span>
             </a>
+
             <a href="#">
                 <img src="/css/Img/LogOut.png" alt="Log Out Icon">
                 <span>Log Out</span>
