Adding CSS styles
User

--- a/GymApp/Views/Home/Index.cshtml
+++ b/GymApp/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">FITNESS CENTER</h1>
+    <h1 class="display-4">YOUR FITNESS JOURNEY STARTS TODAY.</h1>
     <p>Your Personal Training.</p>
 </div>
 
