--- a/GymApp/Views/User/ResetPasswordRequest.cshtml
+++ b/GymApp/Views/User/ResetPasswordRequest.cshtml
@@ -3,28 +3,31 @@
 }
 
 <script src="~/js/Pages/User/ResetPasswordRequest.js" defer></script>
+<link rel="stylesheet" href="~/css/users.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
+
 
 <div>
     <p>< <a asp-area="" asp-controller="User" asp-action="Login">Back To Log In.</a></p>
 </div>
 
-<div class="text-center">
-    <h1 class="display-4">Reset your Password</h1>
-    <p class="strong">for your Fitness Center Account.</p>
-</div>
+<div class="container">
 
-<div class="form-group">
-    <div class="text-center">
+    <main>
+        <h1 class="display-4">Reset Your Password</h1>
+
         <p>Enter your email address below, a message will be sent to reset your password.</p>
-    </div>
-    <form class="frmUser" id="resetPasswordForm">
-        <div>
-            <label for="email">Email</label>
-            <input id="email" type="text" class="form-control" required />
-        </div>
 
-        <div class="text-center">
-            <button type="button" class="btn btn-success" id="btnResetPassword">RESET PASSWORD</button>
+        <div class="form-container">
+            <form id="resetPasswordRequestForm" action="submit">
+                <label for="email">Email</label>
+                <input id="email" type="text" class="form-control" required />
+
+                <div class="button-container">
+                    <button type="submit" class="btn btn-success" id="btnResetPassword">RESET PASSWORD</button>
+                </div>
+            </form>
         </div>
-    </form>
+    </main>
 </div>
+
