--- a/GymApp/Views/User/ResetPassword.cshtml
+++ b/GymApp/Views/User/ResetPassword.cshtml
@@ -3,27 +3,25 @@
 }
 
 <script src="~/js/Pages/User/ResetPassword.js" defer></script>
+<link rel="stylesheet" href="~/css/users.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
-<div class="text-center">
-    <h1 class="display-4">Enter Your New Password</h1>
+<div class="container">
+    <main>
+        <h1 class="display-4">Enter Your New Password</h1>
+        <div class="form-container">
+            <form id="resetPasswordForm" action="submit">
+                <label for="password">New Password</label>
+                <input id="newPassword" type="password" class="form-control" required />
+
+                <label for="confirmPassword">Confirm Password</label>
+                <input id="confirmPassword" type="password" class="form-control" required />
+
+                <div class="button-container">
+                    <button type="submit" class="btn btn-success" id="btnResetPassword">RESET PASSWORD</button> 
+                </div>
+            </form>
+        </div>
+    </main>
 </div>
 
-<div class="form-group">
-    <form class="frmUser" id="resetPasswordForm">
-        <div class="form-group">
-            <label for="password">New Password</label>
-            <input id="newPassword" type="password" class="form-control" required />
-        </div>
-
-        <div class="form-group">
-            <label for="confirmPassword">Confirm Password</label>
-            <input id="confirmPassword" type="password" class="form-control" required />
-
-            <span  class="text-danger"></span>
-        </div>
-
-        <div class="text-center">
-            <button type="submit" class="btn btn-success" id="btnResetPassword">RESET PASSWORD</button>
-        </div>
-    </form>
-</div>
