--- a/GymApp/Views/Exercise/Select.cshtml
+++ b/GymApp/Views/Exercise/Select.cshtml
@@ -11,6 +11,8 @@
         <h1>Select Exercises for Routine</h1>
         <div class="form-container">
             <form id="selectExercisesForm">
+                <input type="hidden" id="routine_id" name="routine_id" value="@ViewBag.RoutineId" />
+
                 <label for="exercise_id">Select Exercise</label>
                 <select id="exercise_id" name="exercise_id">
                     <!-- Options will be populated by JavaScript -->
