--- a/GymApp/Views/User/Login.cshtml
+++ b/GymApp/Views/User/Login.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Log In";
+    Layout = "../Shared/_LayoutUser.cshtml";
 }
 
 <script src="~/js/Pages/User/Login.js" defer></script>
