--- a/GymApp/Views/User/RegisterUser.cshtml
+++ b/GymApp/Views/User/RegisterUser.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Register User";
+    Layout = "../Shared/_LayoutUser.cshtml";
 }
 <script src="~/js/Pages/User/RegisterUser.js" defer></script>
 <link rel="stylesheet" href="~/css/users.css" />
