--- a/GymApp/Views/User/ResetPassword.cshtml
+++ b/GymApp/Views/User/ResetPassword.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Reset Password";
+    Layout = "../Shared/_LayoutUser.cshtml";
+
 }
 
 <script src="~/js/Pages/User/ResetPassword.js" defer></script>
