--- a/GymApp/Views/User/ResetPasswordRequest.cshtml
+++ b/GymApp/Views/User/ResetPasswordRequest.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Reset Password Rquest";
+    ViewData["Title"] = "Reset Password Request";
+    Layout = "../Shared/_Layout.cshtml";
+
 }
 
 <script src="~/js/Pages/User/ResetPasswordRequest.js" defer></script>
