--- a/GymApp/Views/Home/Index.cshtml
+++ b/GymApp/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="~/css/site.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
-<div class="container">
+<div class="container1">
     <main role="main" class="pb-3 center-content">
         <div>
             <h1>YOUR FITNESS JOURNEY STARTS TODAY.</h1>
