--- a/GymApp/Views/Receptionist/ReceptionistPage.cshtml
+++ b/GymApp/Views/Receptionist/ReceptionistPage.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Base Page Receptionists";
+    Layout = "../Shared/_LayoutExercises.cshtml";
 }
 
 <script src="~/js/Pages/Receptionist/" defer></script>
