--- a/GymApp/Views/Shared/_LayoutExercises.cshtml.css
+++ b/GymApp/Views/Shared/_LayoutExercises.cshtml.css
@@ -1,6 +1,6 @@
 ﻿body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #1e4f4f;
     margin: 0;
     padding: 0;
 }
@@ -12,7 +12,7 @@
 }
 
 header {
-    background-color: #3ba4c7;
+    background-color: #1e4f4f;
     color: white;
     display: flex;
     align-items: center;
@@ -20,7 +20,7 @@ header {
 }
 
     header .logo {
-        height: 50px;
+        height: 65px;
         margin-right: 20px;
     }
 
