--- a/GymApp/Views/Shared/_LayoutRoutines.cshtml.css
+++ b/GymApp/Views/Shared/_LayoutRoutines.cshtml.css
@@ -1,6 +1,6 @@
 ﻿body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #245f5f;
     margin: 0;
     padding: 0;
 }
@@ -12,7 +12,7 @@
 }
 
 header {
-    background-color: #3ba4c7;
+    background-color: #1e4f4f;
     color: white;
     display: flex;
     align-items: center;
