Adding Trainer Page

--- a/GymApp/Views/Admin/AdminPage.cshtml
+++ b/GymApp/Views/Admin/AdminPage.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Admin Page";
-    Layout = "../Shared/_LayoutExercises.cshtml";
+    Layout = "../Shared/_LayoutRoutines.cshtml";
 }
 
 <h2>Admin Page</h2>
-<p>Welcome, Administrator!</p>
+<p>Welcome Administrator!</p>
 
 <form id="assignRoleForm">
     <div style="margin-bottom: 20px;">
