--- a/GymApp/Views/Trainer/TrainerPage.cshtml
+++ b/GymApp/Views/Trainer/TrainerPage.cshtml
@@ -3,7 +3,8 @@
     Layout = "../Shared/_LayoutRoutines.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/users.css" />
+<script src="~/js/Pages/Trainer/Trainer.js" defer></script>
+<link rel="stylesheet" href="~/css/routines.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
 
