--- a/GymApp/Views/Trainer/TrainerPage.cshtml
+++ b/GymApp/Views/Trainer/TrainerPage.cshtml
@@ -1,9 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Trainer Page";
-    Layout = "../Shared/_LayoutRoutines.cshtml";
+    Layout = "../Shared/_LayoutRoutineExercise.cshtml";
 }
 
-<script src="~/js/Pages/Trainer/Trainer.js" defer></script>
 <link rel="stylesheet" href="~/css/routines.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
