--- a/GymApp/Views/Shared/_LayoutRoutineExercise.cshtml
+++ b/GymApp/Views/Shared/_LayoutRoutineExercise.cshtml
@@ -33,7 +33,7 @@
                 <img src="/css/Img/Routines.png" alt="Routines Icon">
                 <span> Create Routines</span>
             </a>
-            <a asp-controller="#" asp-action="#">
+            <a asp-controller="Exercise" asp-action="Select">
                 <img src="/css/Img/Classes.png" alt="Classes Icon">
                 <span>Classes</span>
             </a>
