--- a/GymApp/Views/Exercise/Select.cshtml
+++ b/GymApp/Views/Exercise/Select.cshtml
@@ -19,7 +19,7 @@
                 </select>
 
                 <label for="exercise_type">Exercise Type</label>
-                <input type="text" id="exercise_type" name="exercise_type" required>
+                <input type="text" id="exercise_type" name="exercise_type" required readonly>
 
                 <label for="sets">Sets</label>
                 <input type="number" id="sets" name="sets" min="1" required>
